添加jvm 命令行学习笔记